# nova-agent

./: .gitignore  Caddyfile  DEPLOY.md  DEPLOY_VPS.md  HISTORY_CLEANUP.md  LICENSE  NOVA_Mimari_Inceleme.md  PHASE1.md  PHASE2.md  PROGRESS.md  PROJECT_HORUS.md  README.md  README.tr.md  ROADMAP.md  SECURITY.md  WSL_DOCKER.md  docker-compose.faz2.yml  docker-compose.prod.yml  docker-compose.yml  gateway.mjs  package.json
.github/workflows/: ci.yml
.superpowers/sdd/: mw-task-2-report.md
gateway/: .env.example  Dockerfile  gateway.mjs  migrate.mjs  package-lock.json  package.json
k8s/: configmap.yaml  gateway-deployment.yaml  gateway-hpa.yaml  gateway-service.yaml  ingress.yaml  namespace.yaml  secret.example.yaml
keycloak/: nova-realm.json
mobile-worker/: .env.example  pyproject.toml
mobile-worker/src/horus_mobile_worker/: __init__.py  __main__.py  config.py  gateway_client.py  models.py  runner.py  service.py  wsl_ollama.py
mobile-worker/tests/: test_config.py  test_gateway_client.py  test_runner.py  test_service.py
monitoring/: grafana-nova-gw.json  prometheus.yml
nova-android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
scripts/: clean-history.ps1  clean-history.sh  prod-check.mjs  secret-scan.mjs  security-check.mjs  smoke-live.mjs  smoke-mobile-control-plane.mjs  smoke-mobile-control-plane.test.mjs  smoke-mobilerun-worker.mjs  smoke-mobilerun-worker.test.mjs  start-windows-mobile-worker.ps1  start-windows-mobile-worker.test.ps1
searxng/: settings.yml
web/: index.html  package-lock.json  package.json  vite.config.js
(+179 files in other folders)
