[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "horus-mobile-worker"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "httpx>=0.27,<1",
  "mobilerun==0.6.10",
]

[project.scripts]
horus-mobile-worker = "horus_mobile_worker.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/horus_mobile_worker"]
